# meerkat

./: Cargo.toml  README.md
meerkat/: Cargo.toml
meerkat-lib/: Cargo.toml
meerkat-lib/net/: Cargo.toml
meerkat-lib/net/src/: actor.rs  messages.rs  mock.rs  network_layer.rs  protocol.rs  types.rs
meerkat-lib/src/: lib.rs
meerkat-lib/src/net/: actor.rs  messages.rs  mock.rs  mod.rs  network_layer.rs  protocol.rs
meerkat-lib/src/runtime/: mod.rs  runtime_core.rs
meerkat-lib/src/runtime/ast/: mod.rs
meerkat-lib/src/runtime/interpreter/: evaluator.rs  evaluator_core.rs  mod.rs
meerkat-lib/src/runtime/manager/: manager_def.rs  mod.rs
meerkat-lib/src/runtime/parser/: meerkat.lalrpop  mod.rs
meerkat-lib/src/runtime/semantic_analysis/typecheck/: mod.rs  tc_expr.rs  tc_srvs.rs  tc_stmt.rs  tc_test.rs  utils.rs
meerkat-lib/src/runtime/semantic_analysis/var_analysis/: alpha_rename.rs  dep_analysis.rs  mod.rs  read_write.rs
meerkat-lib/tests/: net_integration_test.rs
meerkat/src/: main.rs
